@@ -1,3 +1,12 @@
+2001-05-03  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Xorac/Process.pm (xorac_start_process): Support changes to Core
+
+	* Core.pm (orac_process_argument_list): Rejig so that it is
+	simpler and handles "-skip -loop wait"
+	(orac_print_configuration): Handle ORAC_ARGS
+	(orac_calib_override): Handle array of cal options
+
 2001-04-30  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame.pm: Tweak Michelle header translation 
